--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome to shopping</title>
+</head>
+<body>
 
+<h1>This is a Shopping platform </h1>
+<p>Good Morning </p>
+
+</body>
+</html>
